<resources>
    <string name="app_name">7MinuteWorkout Application</string>
    <string name="_1">1</string>
    <string name="date">date</string>
    <string name="end">END</string>
    <string name="tick">tick</string>
    <string name="congratulations_n_you_have_finished_the_workout">congratulations! \n You have finished the workout!</string>
    <string name="finish">Finish</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="_10">10</string>
    <string name="upcoming_exercise">Upcoming Exercise:</string>
    <string name="name">Name</string>
    <string name="exercise_image">Exercise Image</string>
    <string name="_30">30</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="weight_in_kg">Weight(in kg)</string>
    <string name="height_in_cm">Height(in cm)</string>
    <string name="ft">Ft</string>
    <string name="inch">Inch</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="_15_0">15.0</string>
    <string name="normal">Normal</string>
    <string name="its_description">Its description</string>
    <string name="calculate">Calculate</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="this_will_stop_your_workout_n_you_ve_come_this_far_are_you_sure_nyou_want_to_quit">This will stop your workout. \n You\'ve come this far, are you sure \nyou want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="history">History</string>
    <string name="calculator">Calculator</string>
    <string name="bmi">Bmi</string>
    <string name="start">START</string>
    <string name="workout">Workout</string>
    <string name="time">time</string>
    <string name="min">min</string>
    <string name="_7">7</string>
    <string name="exercise_completed">Exercise Completed</string>
    <string name="no_available_data">No Available Data</string>
    <string name="change_rest_time">Change Rest Time</string>
    <string name="change_workout_time">Change Workout Time</string>
</resources>