<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".FinalScreenActivity"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <!-- Toolbar is more flexible than action bar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_exercise_activity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Light" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/end"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="28sp"
            android:layout_marginTop="80dp"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:srcCompat="@drawable/ic_check"
            android:layout_margin="15dp"
            android:background="@drawable/item_final_circular_color_border"
            android:layout_gravity="center"
            android:contentDescription="@string/tick" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congratulations_n_you_have_finished_the_workout"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/buttonFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:textColor="@color/white"
            android:layout_margin="20dp"
            android:backgroundTint="@android:color/holo_green_dark"/>
    </LinearLayout>